gotov dark mode i sva responzivnost

--- a/IzvorniKod/frontend/dart_arena/app/globals.css
+++ b/IzvorniKod/frontend/dart_arena/app/globals.css
@@ -7,4 +7,79 @@ ovo je nacin definiranja custom novog tailwind-a v4 (nema tailwind.config.ts vis
 */
 @theme{
   --breakpoint-xs: 450px;
+
+  /* custom theme light/dark */
+  --color-textColorDark: var(--textColorDark);
+  --color-textColorLight: var(--textColorLight);
+  --color-background: var(--background);
+  --color-linkColor: var(--linkColor);
+  --color-inputBg: var(--inputBg);
+  --color-buttonLetter: var(--buttonLetter);
+  --color-inputBorder: var(--inputBorder);
+  --color-modalHover: var(--modalHover);
+}
+
+.light {
+  --color-textColorDark: oklch(0.373 0.034 259.733); /* gray-700*/
+  --color-background: oklch(0.967 0.003 264.542); /* gray-100*/
+  --color-linkColor: oklch(0.558 0.288 302.321); /* purple-600 */
+  --color-inputBg: oklch(0.928 0.006 264.531); /* gray-200 */
+  --color-buttonLetter: white; /* white */
+  --color-inputBorder: oklch(0.872 0.01 258.338); /* gray-300 */
+  --color-modalHover: oklch(0.872 0.01 258.338); /* gray-300 */
+
+}
+
+.dark {
+  --color-textColorDark: oklch(0.707 0.022 261.325); /* gray-400*/
+  --color-background: oklch(0.278 0.033 256.848); /* gray-800*/
+  --color-linkColor: oklch(0.627 0.265 303.9); /* purple-500 */
+  --color-inputBg: oklch(0.373 0.034 259.733); /* gray-700 */
+  --color-buttonLetter: oklch(0.872 0.01 258.338); /* gray-300 */
+  --color-inputBorder: oklch(0.373 0.034 259.733); /* gray-700 */
+  --color-modalHover: oklch(0.373 0.034 259.733); /* gray-700 */
+
+}
+
+
+/* mode switch button css */
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox-label {
+  background-color: rgb(66, 66, 66);
+  width: 50px;
+  height: 26px;
+  border-radius: 50px;
+  position: relative;
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fa-moon {color: #8cab04;}
+
+.fa-sun {color: #cfcfcf;}
+
+.checkbox-label .ball {
+  background-color: #b3b3b3;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .checkbox-label .ball {
+  transform: translateX(24px);
+}
+
+.checkbox:checked + .checkbox-label{
+  background-color: #ffff;
 }
