--- a/IzvorniKod/frontend/dart_arena/app/globals.css
+++ b/IzvorniKod/frontend/dart_arena/app/globals.css
@@ -84,6 +84,15 @@ input::-webkit-credentials-auto-fill-button {
   pointer-events: none;
 }
 
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 
 /* mode switch button css */
 .checkbox {
