--- a/IzvorniKod/frontend/dart_arena/app/bootstrap-custom.scss
+++ b/IzvorniKod/frontend/dart_arena/app/bootstrap-custom.scss
@@ -1,5 +1,5 @@
 // bootstrap-custom.scss
-@use "node_modules/bootstrap/scss/functions";
-@use "node_modules/bootstrap/scss/variables";
-@use "node_modules/bootstrap/scss/mixins";
-@use "node_modules/bootstrap/scss/spinners";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/spinners";
